# autoresearch

./: .env.example  .gitignore  README.md  autoresearch-skill.md  council-report-2026-04-27-140738.html  council-transcript-2026-04-27-140738.md  index.html  plan-config.yaml  plan-skill.md  pyproject.toml
.claude-plugin/: plugin.json
docs/specs/: 2026-04-27-autoresearch.md
examples/: sample-config.yaml  sample-skill.handcrafted.md  sample-skill.md
skills/autoresearch/: SKILL.md
src/autoresearch/: __init__.py  cli.py  client.py  generator.py  judge.py  loop.py  metrics.py  mutator.py  orchestrate.py  schemas.py
tests/: test_generator.py  test_judge.py  test_loop.py  test_metrics.py  test_mutator.py  test_orchestrate.py  test_schemas.py
